2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-07-18  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Check cdroms has been initialized in cd_drive_exists(). Based on a
	patch from Emil Soleyman-Zomalan.

2004-07-10  William Jon McCann  <mccann@jhu.edu>

	* src/sj-extractor.c (tick_timeout_cb):
	Cast pipeline to a GstBin.

2004-07-09  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add gst_bin_iterate() to the tick timeout callback to ensure it
	gets called frequently on fast systems. Patch from David Arnold.

2004-06-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use E_xtract instead of _Extract to avoid conflicting with the
	Edit menu.

2004-06-27  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (check_for_file):
	Escape filename to utf8 before displaying it.

2004-06-11  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Don't go weird when someone changes CD whilst the completed
	dialogue is open. Patch from Sean Proctor closing 143998.

2004-06-10  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Span the Strip check box so it doesn't play around with spacing.

2004-06-10  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Use the new file selector.

2004-06-10  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/Makefile.am:
	* tests/Makefile.am:
	Depend on GTK+ 2.4, and re-arrange some variables.

2004-06-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.12. Anyone accusing me of revisionism will be taken
	outside and shot.
	
2004-06-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add colons to the Preferences dialog. Oh, and 200 lines of new
	properties from the new Glade.

2004-06-07  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Force the sample track/album strings to be translated. Another
	patch from Mariano, closing #136479.
	