@@ -1,3 +1,8 @@
+2004-08-25  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
+	Be more paranoid about invalid GConf keys.
+
 2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Add «nb» to ALL_LINGUAS.
